# VariableTiltHexacopter

./: .gitignore  Estimation.md  README.md  compute_inertia.slx  params.m  simulation.slx
bash_scripts/: geometric_gains.sh  run_all.sh
matlab/: Inertia_params.xlsx  params.m  simulation.slx
matlab/modelling_scripts/: compute_params.slx  fixed_wrench_analysis.mlx
misc_python/: compute_inertia.ipynb
modelling_scripts/: compute_params.slx  fixed_wrench_analysis.mlx
ros_bags/: odometry_pose.csv  plot_IMU_data.py  plot_hexacopter.py
ros_bags/geometric_control_FeedForward_circle_sep_bag/: geometric_control_FeedForward_circle_sep_bag_0.db3  metadata.yaml
ros_bags/geometric_control_FeedForward_infinityloop_sep_bag/: metadata.yaml
ros_bags/geometric_control_FeedLin_circle_sep_bag/: geometric_control_FeedLin_circle_sep_bag_0.db3  metadata.yaml
ros_bags/geometric_control_FeedLin_hover_bag/: metadata.yaml
ros_bags/geometric_control_FeedLin_hover_sep_bag/: metadata.yaml
ros_bags/geometric_control_FeedLin_infinityloop_lie_bag/: metadata.yaml
ros_bags/geometric_control_FeedLin_infinityloop_sep_bag/: metadata.yaml
ros_ws/src/geometric_controllers/: package.xml  setup.cfg  setup.py
ros_ws/src/geometric_controllers/config/: control_params.yaml
ros_ws/src/geometric_controllers/geometric_controllers/: adaptive_path_following_node.py  controller.py  hover_control_node.py  path_following_node.py  path_generator.py  utils.py
ros_ws/src/geometric_controllers/launch/: hover_control.launch.py  path_following.launch.py  path_following_adaptive.launch.py
(+89 files in other folders)
